# EUI_rust

./: .gitignore  .gitmodules
docs/: project-structure.zh-CN.md
eui/: Cargo.toml
eui/examples/: anchor_demo.rs  dashboard_demo.rs  gallery.rs  minimal_quick_demo.rs
eui/src/: color.rs  lib.rs  math.rs  rect.rs
eui/src/animation/: animator.rs  easing.rs  mod.rs  timeline.rs
eui/src/app/: event_loop.rs  mod.rs  options.rs  run.rs
eui/src/core/: context.rs  context_state.rs  context_utils.rs  debug_dump.rs  draw_command.rs  foundation.rs  mod.rs
eui/src/graphics/: effects.rs  mod.rs  primitives.rs  transforms.rs
eui/src/platform/: mod.rs  winit_backend.rs
eui/src/quick/: anchor.rs  builders.rs  gfx.rs  layouts.rs  mod.rs  primitive_painter.rs  scopes.rs  ui.rs
eui/src/renderer/: contracts.rs  mod.rs
eui/src/renderer/opengl/: backdrop.rs  font_renderer.rs  image_cache.rs  mod.rs  renderer.rs  shader.rs  vertex.rs
eui/src/runtime/: contracts.rs  frame_context.rs  mod.rs
eui/src/text/: measurement.rs
include/: EUI.h
include/eui/app/detail/: glfw_run_loop_detail.inl  glfw_runtime_detail.inl  runtime_state_detail.inl  sdl2_run_loop_detail.inl  sdl2_runtime_detail.inl
include/eui/core/: debug_dump.h
